Add Versioning for the Lawyer Controller. Closes #25